<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/cardViewLayout"
    android:layout_height="match_parent"
    android:padding="40dp"
    app:cardBackgroundColor="@color/black"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="6dp"
        android:padding="8dp">

        <TextView
            android:id="@+id/nameText"
            android:textColor= "@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/birthTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor= "@color/white"
            android:layout_marginTop="3dp"
            android:text="@string/birth"
            app:layout_constraintStart_toStartOf="@id/nameText"
            app:layout_constraintTop_toBottomOf="@id/nameText" />

        <TextView
            android:id="@+id/eyeTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor= "@color/white"
            android:layout_marginTop="3dp"
            android:text="@string/eye"
            app:layout_constraintStart_toStartOf="@+id/birthTxt"
            app:layout_constraintTop_toBottomOf="@id/birthTxt"
            tools:layout_editor_absoluteY="66dp" />

        <TextView
            android:id="@+id/filmTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor= "@color/white"
            android:layout_marginStart="30dp"
            android:layout_marginTop="3dp"
            android:text="@string/film"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/eyeTxt"
            tools:layout_editor_absoluteY="107dp" />

        <TextView
            android:id="@+id/genderTxt"
            android:layout_width="wrap_content"
            android:textColor= "@color/white"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/gender"
            app:layout_constraintStart_toStartOf="@id/filmTxt"
            app:layout_constraintTop_toBottomOf="@id/filmTxt"
            tools:layout_editor_absoluteY="107dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>