<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:paddingTop="26dp"
    android:paddingBottom="26dp">

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/nameTxt"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/birth_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/birthTxt"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/name_text"
        app:layout_constraintTop_toBottomOf="@id/name_text" />

    <TextView
        android:id="@+id/eye_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/eye_Txt"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/birth_txt"
        app:layout_constraintTop_toBottomOf="@id/birth_txt"
        tools:layout_editor_absoluteY="66dp" />

    <TextView
        android:id="@+id/film_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="3dp"
        android:text="TextView"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/eye_txt"
        tools:ignore="HardcodedText"
        tools:layout_editor_absoluteY="107dp" />

    <TextView
        android:id="@+id/gender_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="@string/genderTxt"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/film_txt"
        app:layout_constraintTop_toBottomOf="@id/film_txt"
        tools:layout_editor_absoluteY="107dp" />
</androidx.constraintlayout.widget.ConstraintLayout>